[gd_scene load_steps=4 format=3 uid="uid://bnv46pokr5wi1"]

[ext_resource type="Script" uid="uid://c8lsv0oeq6qpn" path="res://scripts/pet/functions/PetPeanl.gd" id="1_shmp4"]

[sub_resource type="Theme" id="Theme_vuwde"]
default_font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bc5ad"]
bg_color = Color(0, 0, 0, 0.588235)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.705882, 0.862745, 0.980392, 1)

[node name="PetPenal" type="Node2D"]
script = ExtResource("1_shmp4")

[node name="PetName" type="Label" parent="."]
offset_right = 192.0
offset_bottom = 32.0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
text = "宠物狼名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Panel" parent="."]
offset_left = 32.0
offset_top = 32.0
offset_right = 160.0
offset_bottom = 192.0
theme = SubResource("Theme_vuwde")
theme_override_styles/panel = SubResource("StyleBoxFlat_bc5ad")

[node name="Buttons" type="VBoxContainer" parent="Menu"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 152.0
alignment = 1

[node name="Dialog" type="Button" parent="Menu/Buttons"]
layout_mode = 2
text = "对话"

[node name="Reading" type="Button" parent="Menu/Buttons"]
layout_mode = 2
text = "阅读"

[node name="ShowInput" type="Button" parent="Menu/Buttons"]
layout_mode = 2
text = "输入"

[node name="Sleep" type="Button" parent="Menu/Buttons"]
layout_mode = 2
text = "睡觉"

[node name="Back" type="Button" parent="Menu/Buttons"]
layout_mode = 2
text = "返回"

[connection signal="pressed" from="Menu/Buttons/Dialog" to="." method="_on_dialog_pressed"]
[connection signal="pressed" from="Menu/Buttons/Reading" to="." method="_on_reading_pressed"]
[connection signal="pressed" from="Menu/Buttons/ShowInput" to="." method="_on_show_input_pressed"]
[connection signal="pressed" from="Menu/Buttons/Sleep" to="." method="_on_sleep_pressed"]
[connection signal="pressed" from="Menu/Buttons/Back" to="." method="_on_back_pressed"]
